--- a/repl/src/codemirror.css
+++ b/repl/src/codemirror.css
@@ -19,7 +19,8 @@
   padding: 0 4px; /* Horizontal padding of content */
 }
 
-.CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
+.CodeMirror-scrollbar-filler,
+.CodeMirror-gutter-filler {
   background-color: white; /* The little square between H and V scrollbars */
 }
 
@@ -30,7 +31,8 @@
   background-color: var(--gray-faint);
   white-space: nowrap;
 }
-.CodeMirror-linenumbers {}
+.CodeMirror-linenumbers {
+}
 .CodeMirror-linenumber {
   padding: 0 3px 0 5px;
   min-width: 20px;
@@ -39,8 +41,12 @@
   white-space: nowrap;
 }
 
-.CodeMirror-guttermarker { color: var(--gray-dark); }
-.CodeMirror-guttermarker-subtle { color: var(--gray); }
+.CodeMirror-guttermarker {
+  color: var(--gray-dark);
+}
+.CodeMirror-guttermarker-subtle {
+  color: var(--gray);
+}
 
 /* CURSOR */
 
@@ -71,77 +77,163 @@
   background-color: var(--green);
 }
 @-moz-keyframes blink {
-  0% {}
-  50% { background-color: transparent; }
-  100% {}
+  0% {
+  }
+  50% {
+    background-color: transparent;
+  }
+  100% {
+  }
 }
 @-webkit-keyframes blink {
-  0% {}
-  50% { background-color: transparent; }
-  100% {}
+  0% {
+  }
+  50% {
+    background-color: transparent;
+  }
+  100% {
+  }
 }
 @keyframes blink {
-  0% {}
-  50% { background-color: transparent; }
-  100% {}
+  0% {
+  }
+  50% {
+    background-color: transparent;
+  }
+  100% {
+  }
 }
 
 /* Can style cursor different in overwrite (non-insert) mode */
-.CodeMirror-overwrite .CodeMirror-cursor {}
+.CodeMirror-overwrite .CodeMirror-cursor {
+}
 
-.cm-tab { display: inline-block; text-decoration: inherit; }
+.cm-tab {
+  display: inline-block;
+  text-decoration: inherit;
+}
 
 .CodeMirror-rulers {
   position: absolute;
-  left: 0; right: 0; top: -50px; bottom: -20px;
+  left: 0;
+  right: 0;
+  top: -50px;
+  bottom: -20px;
   overflow: hidden;
 }
 .CodeMirror-ruler {
   border-left: 1px solid var(--gray-light);
-  top: 0; bottom: 0;
+  top: 0;
+  bottom: 0;
   position: absolute;
 }
 
 /* DEFAULT THEME */
 
-.cm-s-default .cm-header {color: var(--purple);}
-.cm-s-default .cm-quote {color: var(--red-dark);}
-.cm-negative {color: var(--purple);}
-.cm-positive {color: var(--red-dark);}
-.cm-header, .cm-strong {
+.cm-s-default .cm-header {
+  color: var(--purple);
+}
+.cm-s-default .cm-quote {
+  color: var(--red-dark);
+}
+.cm-negative {
+  color: var(--purple);
+}
+.cm-positive {
+  color: var(--red-dark);
+}
+.cm-header,
+.cm-strong {
   font-weight: bold;
 }
-.cm-em {font-style: italic;}
-.cm-link {border-bottom: 1px solid;}
-.cm-strikethrough {text-decoration: line-through;}
+.cm-em {
+  font-style: italic;
+}
+.cm-link {
+  border-bottom: 1px solid;
+}
+.cm-strikethrough {
+  text-decoration: line-through;
+}
 
-.cm-s-default .cm-keyword {color: var(--purple);}
-.cm-s-default .cm-atom {color: var(--blue-dark);}
-.cm-s-default .cm-number {color: var(--green-dark);}
-.cm-s-default .cm-def {color: var(--blue);}
-.cm-s-default .cm-variable {color: var(--purple);}
-.cm-s-default .cm-property {color: var(--pink);}
+.cm-s-default .cm-keyword {
+  color: var(--purple);
+}
+.cm-s-default .cm-atom {
+  color: var(--blue-dark);
+}
+.cm-s-default .cm-number {
+  color: var(--green-dark);
+}
+.cm-s-default .cm-def {
+  color: var(--blue);
+}
+.cm-s-default .cm-variable {
+  color: var(--purple);
+}
+.cm-s-default .cm-property {
+  color: var(--pink);
+}
 .cm-s-default .cm-punctuation,
-.cm-s-default .cm-operator {color: var(--blue-dark);}
-.cm-s-default .cm-variable-2 {color: var(--gray);}
-.cm-s-default .cm-variable-3, .cm-s-default .cm-type {color: var(--green-light);}
-.cm-s-default .cm-comment {color: var(--purple);}
-.cm-s-default .cm-string {color: var(--red-dark);}
-.cm-s-default .cm-string-2 {color: var(--orange);}
-.cm-s-default .cm-meta {color: var(--gray);}
-.cm-s-default .cm-qualifier {color: var(--gray);}
-.cm-s-default .cm-builtin {color: var(--purple);}
-.cm-s-default .cm-bracket {color: var(--blue);}
-.cm-s-default .cm-tag {color: var(--blue); font-weight: bold; }
-.cm-s-default .cm-tag.cm-bracket {color: var(--blue-light);}
-.cm-s-default .cm-attribute {color: var(--blue); font-style: italic; }
-.cm-s-default .cm-hr {color: var(--gray);}
-.cm-s-default .cm-link {color: var(--blue);}
+.cm-s-default .cm-operator {
+  color: var(--blue-dark);
+}
+.cm-s-default .cm-variable-2 {
+  color: var(--gray);
+}
+.cm-s-default .cm-variable-3,
+.cm-s-default .cm-type {
+  color: var(--green-light);
+}
+.cm-s-default .cm-comment {
+  color: var(--purple);
+}
+.cm-s-default .cm-string {
+  color: var(--red-dark);
+}
+.cm-s-default .cm-string-2 {
+  color: var(--orange);
+}
+.cm-s-default .cm-meta {
+  color: var(--gray);
+}
+.cm-s-default .cm-qualifier {
+  color: var(--gray);
+}
+.cm-s-default .cm-builtin {
+  color: var(--purple);
+}
+.cm-s-default .cm-bracket {
+  color: var(--blue);
+}
+.cm-s-default .cm-tag {
+  color: var(--blue);
+  font-weight: bold;
+}
+.cm-s-default .cm-tag.cm-bracket {
+  color: var(--blue-light);
+}
+.cm-s-default .cm-attribute {
+  color: var(--blue);
+  font-style: italic;
+}
+.cm-s-default .cm-hr {
+  color: var(--gray);
+}
+.cm-s-default .cm-link {
+  color: var(--blue);
+}
 
-.cm-s-default .cm-error:not(.cm-jsxtreme) {color: var(--red);}
-.cm-invalidchar {color: var(--red);}
+.cm-s-default .cm-error:not(.cm-jsxtreme) {
+  color: var(--red);
+}
+.cm-invalidchar {
+  color: var(--red);
+}
 
-.CodeMirror-composing { border-bottom: 2px solid; }
+.CodeMirror-composing {
+  border-bottom: 2px solid;
+}
 
 /* Default styles for common addons */
 
@@ -149,9 +241,15 @@ div.CodeMirror span.CodeMirror-matchingbracket {
   color: var(--pink);
   border-bottom: 1px solid var(--gray-light);
 }
-div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
-.CodeMirror-matchingtag { background: var(--gray); }
-.CodeMirror-activeline-background {background: var(--gray-light);}
+div.CodeMirror span.CodeMirror-nonmatchingbracket {
+  color: var(--red);
+}
+.CodeMirror-matchingtag {
+  background: var(--gray);
+}
+.CodeMirror-activeline-background {
+  background: var(--gray-light);
+}
 
 /* STOP */
 
@@ -168,7 +266,8 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
   overflow: scroll !important; /* Things will break if this is overridden */
   /* 30px is the magic margin used to hide the element's real scrollbars */
   /* See overflow: hidden in .CodeMirror */
-  margin-bottom: -30px; margin-right: -30px;
+  margin-bottom: -30px;
+  margin-right: -30px;
   padding-bottom: 30px;
   height: 100%;
   outline: none; /* Prevent dragging from highlighting the element */
@@ -182,30 +281,39 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
 /* The fake, visible scrollbars. Used to force redraw during scrolling
    before actual scrolling happens, thus preventing shaking and
    flickering artifacts. */
-.CodeMirror-vscrollbar, .CodeMirror-hscrollbar, .CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
+.CodeMirror-vscrollbar,
+.CodeMirror-hscrollbar,
+.CodeMirror-scrollbar-filler,
+.CodeMirror-gutter-filler {
   position: absolute;
   z-index: 6;
   display: none;
 }
 .CodeMirror-vscrollbar {
-  right: 0; top: 0;
+  right: 0;
+  top: 0;
   overflow-x: hidden;
   overflow-y: scroll;
 }
 .CodeMirror-hscrollbar {
-  bottom: 0; left: 0;
+  bottom: 0;
+  left: 0;
   overflow-y: hidden;
   overflow-x: scroll;
 }
 .CodeMirror-scrollbar-filler {
-  right: 0; bottom: 0;
+  right: 0;
+  bottom: 0;
 }
 .CodeMirror-gutter-filler {
-  left: 0; bottom: 0;
+  left: 0;
+  bottom: 0;
 }
 
 .CodeMirror-gutters {
-  position: absolute; left: 0; top: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
   min-height: 100%;
   z-index: 3;
 }
@@ -224,7 +332,8 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
 }
 .CodeMirror-gutter-background {
   position: absolute;
-  top: 0; bottom: 0;
+  top: 0;
+  bottom: 0;
   z-index: 4;
 }
 .CodeMirror-gutter-elt {
@@ -232,8 +341,12 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
   cursor: default;
   z-index: 4;
 }
-.CodeMirror-gutter-wrapper ::selection { background-color: transparent }
-.CodeMirror-gutter-wrapper ::-moz-selection { background-color: transparent }
+.CodeMirror-gutter-wrapper ::selection {
+  background-color: transparent;
+}
+.CodeMirror-gutter-wrapper ::-moz-selection {
+  background-color: transparent;
+}
 
 .CodeMirror-lines {
   cursor: text;
@@ -241,7 +354,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
 }
 .CodeMirror pre {
   /* Reset some styles that the rest of the page might have set */
-  -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
   border-width: 0;
   background: transparent;
   font-family: inherit;
@@ -266,7 +381,10 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
 
 .CodeMirror-linebackground {
   position: absolute;
-  left: 0; right: 0; top: 0; bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   z-index: 0;
 }
 
@@ -276,9 +394,12 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
   overflow: auto;
 }
 
-.CodeMirror-widget {}
+.CodeMirror-widget {
+}
 
-.CodeMirror-rtl pre { direction: rtl; }
+.CodeMirror-rtl pre {
+  direction: rtl;
+}
 
 .CodeMirror-code {
   outline: none;
@@ -306,7 +427,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: var(--red);}
   position: absolute;
   pointer-events: none;
 }
-.CodeMirror-measure pre { position: static; }
+.CodeMirror-measure pre {
+  position: static;
+}
 
 div.CodeMirror-cursors {
   visibility: hidden;
@@ -321,19 +444,33 @@ div.CodeMirror-dragcursors {
   visibility: visible;
 }
 
-.CodeMirror-crosshair { cursor: crosshair; }
-.CodeMirror-line::selection, .CodeMirror-line > span::selection, .CodeMirror-line > span > span::selection { background: var(--pink); }
-.CodeMirror-line::-moz-selection, .CodeMirror-line > span::-moz-selection, .CodeMirror-line > span > span::-moz-selection { background: var(--pink); }
+.CodeMirror-crosshair {
+  cursor: crosshair;
+}
+.CodeMirror-line::selection,
+.CodeMirror-line > span::selection,
+.CodeMirror-line > span > span::selection {
+  background: var(--pink);
+}
+.CodeMirror-line::-moz-selection,
+.CodeMirror-line > span::-moz-selection,
+.CodeMirror-line > span > span::-moz-selection {
+  background: var(--pink);
+}
 
 .cm-searching {
   background: var(--yellow);
 }
 
 /* Used to force a border model for a node */
-.cm-force-border { padding-right: .1px; }
+.cm-force-border {
+  padding-right: .1px;
+}
 
 /* See issue #2901 */
-.cm-tab-wrap-hack:after { content: ''; }
+.cm-tab-wrap-hack:after {
+  content: '';
+}
 
 /* Hide the cursor in the output area */
 #output-container .CodeMirror-cursor {
@@ -343,8 +480,8 @@ div.CodeMirror-dragcursors {
 .cm-jsxtreme,
 .cm-jsxtreme-delimiter,
 .jsxtreme-bg {
-  /* fainter than purple-faint */
-  background: var(--gray-faint) !important;
+  /* background highlight for jsxtreme */
+  background: var(--blue-faint) !important;
 }
 
 .cm-jsxtreme-delimiter {
@@ -354,7 +491,37 @@ div.CodeMirror-dragcursors {
   border-radius: 3px;
 }
 
+.cm-header {
+  font-size: 1.2em;
+}
+
+.cm-url {
+  font-style: italic;
+}
+
 .CodeMirror-selectedtext {
   background: var(--pink) !important;
   color: white !important;
+}
+
+.cm-jsxtreme {
+  color: var(--blue);
+}
+.cm-s-default .cm-jsxtreme.cm-string {
+  color: var(--blue-dark);
+}
+.cm-s-default .cm-jsxtreme.cm-tag {
+  color: var(--red-dark);
+  font-weight: bold;
+}
+.cm-s-default .cm-jsxtreme.cm-tag.cm-bracket {
+  color: var(--red);
+}
+.cm-s-default .cm-jsxtreme.cm-attribute {
+  color: var(--red-dark);
+  font-style: italic;
+}
+.cm-s-default .cm-jsxtreme.cm-variable {
+  color: var(--red-dark);
+  font-weight: bold;
 }
